@@ -3,11 +3,12 @@ package ru.practicum.item;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 import ru.practicum.exception.NotFoundException;
+import ru.practicum.exception.ValidateEmailException;
 import ru.practicum.user.User;
+import ru.practicum.user.UserRepositoryImpl;
 
 import java.util.*;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
@@ -15,7 +16,7 @@ public class ItemRepositoryImpl implements ItemRepository {
 
     Map<Long, List<Item>> items = new HashMap<>();
 
-    private final AtomicLong idCounter = new AtomicLong();
+    private AtomicLong idCounter = new AtomicLong();
 
     @Override
     public Item get(Long itemId) {
@@ -44,13 +45,19 @@ public class ItemRepositoryImpl implements ItemRepository {
             throw new NotFoundException("Передан пустой аргумент!");
         }
         Optional<Item> first = itemsUser.stream().filter(x -> x.getId().equals(itemId)).findFirst();
-        if (first.isEmpty()) {
+        if (first.isEmpty()){
             throw new NotFoundException("");
         }
         Item itemInList = first.get();
-        if (item.getName() != null) itemInList.setName(item.getName());
-        if (item.getDescription() != null) itemInList.setDescription(item.getDescription());
-        if (item.getAvailable() != null) itemInList.setAvailable(item.getAvailable());
+        if (item.getName() != null) {
+            itemInList.setName(item.getName());
+        }
+        if (item.getDescription() != null) {
+            itemInList.setDescription(item.getDescription());
+        }
+        if (item.getAvailable() != null) {
+            itemInList.setAvailable(item.getAvailable());
+        }
         itemsUser.remove(itemsUser.stream().filter(x -> x.getId().equals(itemId)).findFirst().get());
         itemsUser.add(itemInList);
         items.put(userId, itemsUser);
@@ -59,16 +66,21 @@ public class ItemRepositoryImpl implements ItemRepository {
 
     @Override
     public List<Item> search(Long userId, String text) {
-        if (text.isEmpty()) return new ArrayList<>();
-        return items.values()
+        if (text.isEmpty()) {
+            return new ArrayList<>();
+        }
+        List<Item> collect = items.values()
                 .stream()
                 .flatMap(Collection::stream)
                 .filter(item -> item.getDescription().toLowerCase().contains(text.toLowerCase()) && item.getAvailable().equals(true))
-                .collect(Collectors.toList());
+                .toList();
+        return collect;
     }
 
     public List<Item> getAll(Long userId) {
-        if (items.get(userId) == null) throw new NotFoundException("");
+        if (items.get(userId) == null) {
+            throw new NotFoundException("");
+        }
         return items.get(userId);
     }
 }
