@@ -3,13 +3,17 @@ package ru.practicum.user;
 import org.springframework.stereotype.Repository;
 import ru.practicum.exception.DuplicateEmailException;
 import ru.practicum.exception.NotFoundException;
+import ru.practicum.exception.ValidateEmailException;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 
 @Repository
 public class UserRepositoryImpl implements UserRepository {
     private final Map<Long, User> users = new HashMap<>();
+
     private static Long id = 1L;
 
     @Override
@@ -25,7 +29,9 @@ public class UserRepositoryImpl implements UserRepository {
 
     @Override
     public User get(Long userId) {
-        if (users.get(userId) == null) throw new NotFoundException("");
+        if(users.get(userId) == null) {
+            throw new NotFoundException("");
+        }
         return users.get(userId);
     }
 
@@ -42,7 +48,10 @@ public class UserRepositoryImpl implements UserRepository {
             }
             oldUser.setEmail(user.getEmail());
         }
-        return users.put(oldUser.getId(), oldUser);
+
+        User updatedUser = users.put(oldUser.getId(), oldUser);
+        return updatedUser;
+
     }
 
     @Override
@@ -52,7 +61,15 @@ public class UserRepositoryImpl implements UserRepository {
 
     @Override
     public List<User> findAll() {
-        return new ArrayList<>(users.values());
+        return users.values().stream().toList();
+    }
+
+    private long getId() {
+        long lastId = users.values().stream()
+                .mapToLong(User::getId)
+                .max()
+                .orElse(0);
+        return lastId + 1;
     }
 
     private Optional<User> searchUserByEmail(String email, Long userId) {
@@ -64,11 +81,7 @@ public class UserRepositoryImpl implements UserRepository {
     }
 
     private boolean validateEmail(User user) {
-        List<User> userList = users
-                .values()
-                .stream()
-                .filter(x -> x.getEmail().equals(user.getEmail()))
-                .collect(Collectors.toList());
+        List<User> userList = users.values().stream().filter(x -> x.getEmail().equals(user.getEmail())).toList();
         return userList.size() > 0;
     }
 }
